--- a/assest/css/main.css
+++ b/assest/css/main.css
@@ -11,8 +11,9 @@ h1 {
   margin-top: 0px;
 }
 
-h2{
-  margin:-4,22rem;
+.picture{
+  width: 50%;
+
 }
 .ha{
   padding-top: 30px;
@@ -30,20 +31,6 @@ section {
 #mobile-demo {
   width: 100px;
   box-shadow: none;
-}
-
-
-.hover08 figure img {
-  -webkit-filter: grayscale(100%);
-  filter: grayscale(100%);
-  -webkit-transition: .3s ease-in-out;
-  transition: .3s ease-in-out;
-  width: 130px;
-  height: 130px;
-}
-.hover08 figure:hover img {
-  -webkit-filter: grayscale(0);
-  filter: grayscale(0);
 }
 
 
