--- a/assest/css/main.css
+++ b/assest/css/main.css
@@ -9,6 +9,7 @@ h1 {
   color:#000;
   padding: 0.7em;
   margin-top: 0px;
+  margin-bottom: 0px;
 }
 
 .picture{
@@ -31,9 +32,23 @@ section {
 #mobile-demo {
   width: 100px;
   box-shadow: none;
+  background-color: #9e9e9e;
 }
 
 
+.top-tags {
+  bottom: auto;
+  top: 0px;
+}
+
+.tags {
+  color: red;
+  position: absolute;
+  bottom: 8px;
+  left: 80px;
+  font-size: 18px;
+  font-family: 'La Belle Aurore', cursive;
+}
 #proyect {
     width: 100%;
   height: auto;
@@ -178,7 +193,7 @@ a {
 
 i {
   font-size: 5em;
-  color :#1ab99f;
+  color :gray;
 }
 
 .ch-info p {
@@ -208,7 +223,7 @@ i {
 }
 
 .ch-info p a:hover {
-  color: #08fdd8;
+  color: red;
 }
 
 #desborde {
@@ -229,7 +244,7 @@ i {
 }
 
 .ch-item:hover .ch-info-back {
-  background: #e88cb6;
+  background: gray;
 }
 
 
