--- a/assest/css/main.css
+++ b/assest/css/main.css
@@ -2,7 +2,7 @@
   padding: 0;
   margin: 0;
   box-sizing: border-box;
-  font-family: 'IBM Plex Serif', serif;
+  font-family: 'Oswald', sans-serif;
 }
 
 h1 {
@@ -12,9 +12,19 @@ h1 {
   margin-bottom: 0px;
 }
 
+.big{
+  font-size: 20px;
+}
+.orden {
+  display:flex;
+}
 .picture{
   width: 50%;
 
+}
+
+.txt {
+  color: #fff;
 }
 .ha{
   padding-top: 30px;
@@ -60,7 +70,9 @@ section {
     position: relative;
 }
 
-
+.text-one {
+  text-align: center;
+}
 
 .ch-grid {
   margin: 20px 0 0 0;
