--- a/assest/css/main.css
+++ b/assest/css/main.css
@@ -6,12 +6,23 @@
 }
 
 h1 {
-  color:#000;
+  color:#fff;
   padding: 0.9em;
   margin-top: 0px;
   margin-bottom: 0px;
 }
 
+#welcome {
+  background-image: url(img/responsive-web-design-bg-3.jpg);
+  background-position: center 30%;
+  background-size: cover;
+}
+
+#contact {
+  background-image: url(img/responsive-web-design-bg-3.jpg);
+  background-position: center 30%;
+  background-size: cover;
+}
 .big{
   font-size: 20px;
 }
@@ -30,9 +41,6 @@ h1 {
   padding-top: 30px;
 }
 
-.fondo {
-  background-color: #3f3f3f;
-}
 
 section {
   width: 100%;
@@ -45,20 +53,6 @@ section {
   background-color: #9e9e9e;
 }
 
-
-.top-tags {
-  bottom: auto;
-  top: 0px;
-}
-
-.tags {
-  color: red;
-  position: absolute;
-  bottom: 8px;
-  left: 80px;
-  font-size: 18px;
-  font-family: 'La Belle Aurore', cursive;
-}
 #proyect {
     width: 100%;
   height: auto;
@@ -168,7 +162,6 @@ a {
   -o-transform-origin: 50% 100%;
   -ms-transform-origin: 50% 100%;
   transform-origin: 50% 100%;
-  
   z-index: 100;
   box-shadow: 
     inset 2px 1px 4px rgba(0,0,0,0.1);
@@ -235,7 +228,7 @@ i {
 }
 
 .ch-info p a:hover {
-  color: red;
+  color: #fff;
 }
 
 #desborde {
@@ -269,19 +262,19 @@ i {
  }
 
 #skills {
-  background-color: #9e9e9e;
+  background-color: #B2BABB;
 }
 #about {
-  background-color: #424242;
+  background-color: #CCD1D1;
   height: 100vh;
 }
 
 #projects {
-  background-color: #616161;
+  background-color: #9e9e9e;
 }
 
 #contact{
-  background-color: #757575;
+  background-color: #CCD1D1;
 }
 img{
   width: 80%;
