--- a/assest/css/main.css
+++ b/assest/css/main.css
@@ -233,7 +233,7 @@ i {
 
 #desborde {
   overflow: hidden;
-  background-color: #616161;
+  background-color: #9e9e9e;
 }
 
 .ch-item:hover .ch-info-front {
