--- a/assest/css/main.css
+++ b/assest/css/main.css
@@ -176,11 +176,11 @@ a {
 }
 
 .ch-img-2 { 
-  background-image: url(img/images.png);
+  background-image: url(img/giphy-downsized.gif);
 }
 
 .ch-img-3 { 
-  background-image: url(img/giphy-downsized.gif);
+  background-image: url(img/images.png);
 }
 
 .ch-info h3 {
@@ -285,7 +285,7 @@ img{
     width: 9em;
   }
 
-  #skills #myCanvas {
+  #skills #myCanvasContainer {
     width: 260px;
     height: 260px;
   }
