--- a/assest/css/main.css
+++ b/assest/css/main.css
@@ -191,7 +191,7 @@ a {
   margin: 0 25px;
   padding: 40px 0 0 0;
   height: 90px;
-  font-family: 'Open Sans', Arial, sans-serif;
+  font-family: 'Open Sans';
   text-shadow: 0 0 1px #000,
     0 1px 2px rgba(0,0,0,0.3);
 }
